2006-08-30 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/sleep.h: Fix the entry for the ATtiny2313, the revision
	I datasheet was indeed correct.

2006-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add the new "asmdemo" example.  It demonstrates how C and assembly
	source files could be used within one project.
	* doc/examples/asmdemo: (New directory.)
	* doc/examples/asmdemo/asmdemo.c: (New file.) asmdemo implementation.
	* doc/examples/asmdemo/isrs.S: (Ditto.)
	* doc/examples/asmdemo/project.h: (Ditto.)
	* doc/examples/asmdemo/Makefile: (Ditto.)
	* doc/examples/asmdemo/asmdemo.dox: (New file.) Document the asmdemo.
	* doc/examples/Makefile.am: Wire the asmdemo into the build and
	distribution process.
	* doc/examples/all-demos.dox: Add a paragraph about the purpose of
	this new demo, including a reference to it.

2006-08-28 Eric B. Weddington <eweddington@cso.atmel.com>

	Additional fix for bug #16411.
	* include/avr/interrupt.h: Add the 'externally_visible' attribute on all
	interrupt service routine macros.
	* include/compat/deprecated.h: Add the 'externally_visible' attribute on the
	INTERRUPT macro.

2006-08-28 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/Makefile: Catch binutils 2.17 flagging
	an error for the empty .eeprom section.
	* doc/examples/demo/demo.dox: Explain binutils 2.17's
	changed behaviour in avr-objcopy when trying to copy an
	empty .eeprom section.

2006-08-24 Eric B. Weddington <eweddington@cso.atmel.com>

	Fix for bug #16411.
	* include/avr/interrupt.h: Add the 'used' attribute on all interrupt
	service routine macros.
	* include/compat/deprecated.h: Add the 'used' attribute on the INTERRUPT
	macro.
	* NEWS: Add to fixed bug list.

2006-08-10 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fixes to the HD44780 driver; thanks to Knut Schwichtenberg
	for pointing this out, and helping in testing it.
	* doc/examples/stdiodemo/hd44780.c: Fix timing issues.  The
	values read back from the HD44780 need to be sampled while